@@ -39,16 +39,13 @@ opt_optimize_small = CFLAGS="-g -Os"
 opt_no_act =
 opt_quiet =
 
-comma=,
-space_sep_build_opts := $(subst $(comma), ,$(DEB_BUILD_OPTIONS))
-build_opt_parallel := $(filter parallel=%,$(space_sep_build_opts))
-
-ifneq (,$(filter noopt,$(space_sep_build_opts)))
+ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
     opt_optimize = --disable-assembler CFLAGS="-g -O0"
     opt_optimize_small = --disable-assembler CFLAGS="-g -O0"
 endif
 
 ifndef in_submake
+build_opt_parallel := $(filter parallel=%,$(DEB_BUILD_OPTIONS))
 ifneq (,$(build_opt_parallel))
     MAKEFLAGS += -j $(subst parallel=,,$(build_opt_parallel))
 endif
@@ -58,7 +55,7 @@ ifneq (,$(findstring n,$(MAKEFLAGS)))
     opt_no_act = --no-act
 endif
 
-ifneq (,$(filter quiet,$(space_sep_build_opts)))
+ifneq (,$(filter quiet,$(DEB_BUILD_OPTIONS)))
     opt_quiet = --quiet
     MAKEFLAGS += --quiet
 endif
