@@ -3,9 +3,11 @@ xz-utils (4.999.9beta+20100120-1) unstable; urgency=low
   * New upstream snapshot, taken from upstream commit 2a98fdff.
   * xz-utils: NEWS.Debian.gz: Clarify how else interleaved output can
     go wrong.
+  * debian/rules: Simplify by removing support for comma-delimited
+    $(DEB_BUILD_OPTIONS).
   * Correct some typos in the 4.999.9beta+20100117-1 changelog entry.
 
- -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 21 Jan 2010 04:21:42 -0600
+ -- Jonathan Nieder <jrnieder@gmail.com>  Thu, 21 Jan 2010 04:29:19 -0600
 
 xz-utils (4.999.9beta+20100117-1) unstable; urgency=low
 
